[package]
name = "javascriptcore-sys"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
# exclude = [
#     "/WebKit/Examples",
#     "/WebKit/LayoutTests",
#     "/WebKit/ManualTests",
#     "/WebKit/PerformanceTests",
#     "/WebKit/Source/JavaScriptCore/tests",
#     "/WebKit/Source/ThirdParty/ANGLE",
#     "/WebKit/Source/ThirdParty/brotli",
#     "/WebKit/Source/ThirdParty/qunit",
#     "/WebKit/Source/ThirdParty/woff2",
#     "/WebKit/Source/WebCore",
#     "/WebKit/Source/WebKit",
#     "/WebKit/Source/WebKit2",
#     "/WebKit/Source/WebInspectorUI",
#     "/WebKit*/ChangeLog*",
#     "/WebKit*xcodeproj",
#     "/WebKit/Tools/WebKitTestRunner",
#     "/WebKit/Tools/WebKitLauncher",
#     "/WebKit/Tools/BuildSlaveSupport",
#     "/WebKit/Tools/MiniBrowser",
#     "/WebKit/Tools/TestResultServer",
#     "/WebKit/Tools/DumpRenderTree",
#     "/WebKit/Tools/iExploder",
#     "/WebKit/Tools/CygwinDownloader",
#     "/WebKit/WebKitBuild",
#     "/WebKit/WebKitLibraries",
#     "/WebKit/Websites",
# ]
include = [
    "/////WebKit/Source/JavaScriptCore"
]

[features]
default = []
bundled = []

[dependencies]

[build-dependencies]
bindgen = "0.49.3"
pkg-config = "0.3.14"
