[package]
name = "jscore"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@technocreatives.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
javascriptcore-sys = { path = "../javascriptcore-sys" }
runtime = "0.3.0-alpha.6"
futures-preview = "0.3.0-alpha.16"
