[package]
name = "jscore"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
bundled = ["javascriptcore-sys/bundled"]

[dependencies]
javascriptcore-sys = { path = "../javascriptcore-sys" }
runtime = "0.3.0-alpha.6"
futures-preview = "0.3.0-alpha.16"
